# simple_iterators

./: .gitignore  CMakeLists.txt  README.md  codecov.sh
.github/workflows/: build-and-test.yml
.run/: All Tests.run.xml
src/: CMakeLists.txt
src/si/: algorithms.hxx  callables.hxx  exceptions.cxx  exceptions.hxx  generators.hxx  iterable.hxx  iterator.hxx  range.hxx  si.hxx  traits.hxx
src/si/algorithms/: collect.hxx  count.hxx  drop_take.hxx  filter.hxx  first.hxx  for_each.hxx  indexed.hxx  map.hxx  zip.hxx
test/: CMakeLists.txt  algorithms_tests.cxx  collector_tests.cxx  config.hxx  generators_tests.cxx  iterable_tests.cxx  iterator_tests.cxx  range_tests.cxx
